# SEAO_QA

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
etl/: indexing.py
qdrant_data/: meta.json
src/: embedding.py  rag_pipeline.py  vector_db.py
